hphp/test/zend/bad/ext/standard/tests/file/php_fd_wrapper_04.php.skipif
<?php include('skipif.inc'); 
if(substr(PHP_OS, 0, 3) == "WIN")
	die("skip Not for Windows");

//we'd need a release and a test variation for windows, because in debug builds we get this message:
//Warning: Invalid parameter detected in CRT function '_dup' (f:\dd\vctools\crt_bld\self_x86\crt\src\dup.c:52)
//I greped the CRT sources and found no function capable of validating a file descriptor
